--- a/src/pages/login/index.css
+++ b/src/pages/login/index.css
@@ -1,7 +1,19 @@
 .root {
   padding: 20px;
+  max-width: 730px;
+  margin: 0 auto;
 }
 .containerTitle {
   text-align: center;
-  margin-bottom: 44px;
+  padding: 35px 0px;
+}
+@media (min-width: 769px) {
+  .containerTitle {
+    padding: 50px 0px;
+    text-align: center;
+  }
+}
+.containerLogin {
+  max-width: 400px;
+  margin: 0 auto;
 }
