--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+.root {
+  padding-bottom: 50px;
+}
 .header {
   height: 60px;
   padding: 20px 14px;
@@ -10,11 +13,32 @@
   justify-content: space-between;
   align-items: center;
 }
+@media (min-width: 769px) {
+  .header {
+    height: 90px;
+  }
+}
 .containerLogo {
   width: 40px;
   height: 34px;
 }
+@media (min-width: 769px) {
+  .containerLogo {
+    width: 65px;
+    height: 54px;
+  }
+}
 .logo {
+  width: 100%;
+  height: 100%;
+}
+.containerMenuButton {
   width: auto;
   height: auto;
+}
+@media (min-width: 769px) {
+  .containerMenuButton {
+    width: 120px;
+    height: 50px;
+  }
 }
