--- a/src/pages/password/index.css
+++ b/src/pages/password/index.css
@@ -3,10 +3,15 @@
 }
 .containerTitle {
   text-align: center;
-  margin-bottom: 44px;
+  padding: 35px 0px;
 }
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+@media (min-width: 769px) {
+  .containerTitle {
+    padding: 50px 0px;
+    text-align: center;
+  }
+}
+.containerPassword {
+  max-width: 400px;
+  margin: 0 auto;
 }
