--- a/src/pages/user-data/index.css
+++ b/src/pages/user-data/index.css
@@ -1,14 +1,31 @@
 .root {
-  font-family: inherit;
   padding: 20px;
+  max-width: 730px;
+  margin: 0 auto;
 }
 .containerTitle {
   text-align: center;
-  margin-bottom: 44px;
+  padding: 35px 0px;
 }
+@media (min-width: 769px) {
+  .containerTitle {
+    padding: 50px 0px;
+    text-align: center;
+  }
+}
+.containerForm {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
 .form {
-  display: grid;
-  grid-template-rows: 3fr 2fr 3fr;
-  align-items: start;
-  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-bottom: 40px;
+}
+@media (min-width: 769px) {
+  .form {
+    gap: 35px;
+  }
 }
