--- a/src/pages/user-pets/index.css
+++ b/src/pages/user-pets/index.css
@@ -1,3 +1,28 @@
 .root {
-  padding: 20px;
+  padding: 0px 20px;
+  padding-bottom: 40px;
+}
+
+@media (min-width: 769px) {
+  .root {
+    padding: 0px 40px;
+    padding-bottom: 40px;
+  }
+}
+
+.containerTitle {
+  padding: 35px 0px;
+}
+@media (min-width: 769px) {
+  .containerTitle {
+    padding: 50px 0px;
+    text-align: center;
+  }
+}
+@media (min-width: 1024px) {
+  .containerCards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 32px;
+  }
 }
