--- a/src/components/petsCard/index.css
+++ b/src/components/petsCard/index.css
@@ -2,7 +2,9 @@
   box-sizing: border-box;
 }
 .root {
-  height: 300px;
+  height: auto;
+  width: 100%;
+  max-width: 380px;
   display: grid;
   grid-template-rows: 5fr 3fr;
   border-radius: 4px;
