--- a/src/components/petsCard/index.css
+++ b/src/components/petsCard/index.css
@@ -15,8 +15,11 @@
   border-radius: 4px;
   width: 100%;
   height: 188px;
+  object-fit: fill;
 }
+
 .image {
+  border-radius: 4px 4px 0px 0px;
   width: 100%;
   height: 100%;
 }
@@ -40,6 +43,7 @@
   grid-row-end: 3;
   justify-content: center;
 }
+
 .containerReportButton {
   text-align: right;
   align-self: end;
@@ -49,4 +53,8 @@
 }
 .editButton {
   margin: 0;
+  cursor: pointer;
+}
+.editButton:hover {
+  margin: -4px;
 }
