--- a/src/components/reportCard/index.css
+++ b/src/components/reportCard/index.css
@@ -1,3 +1,14 @@
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 999;
+}
 .reportForm {
   display: flex;
   flex-direction: column;
@@ -14,6 +25,7 @@
   height: 603px;
   width: 314px;
   padding: 15px;
+  z-index: 1;
 }
 @media (min-width: 760px) {
   .root {
@@ -23,6 +35,10 @@
 .containerCloseButton {
   text-align: right;
 }
+.img {
+  cursor: pointer;
+}
+
 .textArea {
   height: 127px;
 }
