--- a/src/components/menu/index.css
+++ b/src/components/menu/index.css
@@ -1,14 +1,24 @@
-.root {
-  background-color: #42a9d4;
-}
+
 .containerMenu {
-  height: 100vh;
+  background-color: #1599d1;
+  margin-top: 90px;
+  height:100vh;
+  width: 100%;
   margin: 0 auto;
-  min-width: 200px;
-  max-width: 700px;
   padding: 45px 30px;
   display: grid;
   grid-template-rows: 1fr 2fr 1fr;
+  position: absolute;
+  right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .containerMenu{
+    height:calc(100vh - 90px);
+    max-width: 400px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 8px 18px;
+  }
 }
 
 .containerCloseButton {
@@ -22,17 +32,16 @@
 }
 
 .containerButtons {
-  padding: 0 20px;
+  max-width: 290px;
+    margin: 0 auto;
+width: 100%;
+height: 100%;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   justify-items: center;
   align-items: center;
 }
-@media (min-width: 769px) {
-  .containerButtons {
-    padding: 0 50px;
-  }
-}
+
 
 .containerLogin {
   min-width: 100px;
