--- a/src/ui/loader/index.css
+++ b/src/ui/loader/index.css
@@ -1,16 +1,16 @@
 .root {
   display: flex;
   min-height: 100%;
+  height: 100vh;
   justify-content: center;
   align-items: center;
 }
 .spinner {
   margin: auto;
-  border: 4px solid rgba(0, 0, 0, 0.1);
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  border-left-color: #09f;
+  
 
   animation: spin 1s ease infinite;
 }
